--- a/appsec.properties
+++ b/appsec.properties
@@ -1,10 +1,6 @@
 #file format: https://en.wikipedia.org/wiki/.properties
-application_id = GP0000
-dev_team_lead = tbd@gozego.com
-security_champion = tbd@gozeg.com
-exec_lead= csnyder@gozego.com
-observers = tbd@gozego.com, tbd@gozego.com
-prod_branch = master
-prod_urls = https://tbd.gozego.com
-qa_urls = https://tbd.uat.gozego.com
-dev_urls = https://tbd.development.paylease.com
+application_id = GP9523
+dev_team_lead = l-eng-payment-security@gozego.com
+exec_lead= hferreira@gozego.com
+observers = gnyrkkanen@gozego.com
+prod_branch = always_verify_ssl_cert_and_host
